testing changes to min width

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -8,7 +8,7 @@
   <link rel="icon" href="/assets/images/oversightlogofav.svg" sizes="32x32">
 </head>
 <body
-  class="gate-pending{% if layout_columns == 2 %} columns-2{% endif %}"
+  class="gate-pending"
   data-theme="{{ theme | default('default') }}"
   data-required-clearance="{{ clearance_required | default(0) }}"
   {% if pagefind_ignore %}data-pagefind-ignore="all"{% endif %}
