--- a/src/assets/css/pagefind-overrides.css
+++ b/src/assets/css/pagefind-overrides.css
@@ -8,14 +8,18 @@
     --pagefind-ui-border-radius: 0px;
 }
 
-.pagefind-ui__form:before,
-.pagefind-ui__form.svelte-e9gkc3:before {
+.pagefind-ui {
+    display: block;
+    width: 100%;
+    max-width: none;
+}
+
+.pagefind-ui__form:before {
     display: none !important;
     content: none !important;
 }
 
-.pagefind-ui__search-input,
-.pagefind-ui__search-input.svelte-e9gkc3 {
+.pagefind-ui__search-input {
     width: 100%;
     box-sizing: border-box;
     height: auto;
