--- a/src/documents/njk-files/access-denied.njk
+++ b/src/documents/njk-files/access-denied.njk
@@ -24,8 +24,8 @@ pagefind_ignore: true
 </div>
 
 <div class="card">
-  {% sectionHeader "Memorandium" %} 
+  {% sectionHeader "Memorandum" %} 
   From Overseer Chen
   {% endsectionHeader %}
-  <p>Excess requess for clearance review will be subject to the same policy as requests for LL increase. (See Protocol: <span class="horus">Rocks Fall; Everybody Dies</span>)</p>
+  <p>Excess requests for clearance review will be subject to the same policy as requests for LL increase. (See Protocol: <span class="horus">Rocks Fall; Everybody Dies</span>)</p>
 </div>
