--- a/src/documents/njk-files/login.njk
+++ b/src/documents/njk-files/login.njk
@@ -15,7 +15,7 @@ title: Access Terminal
 
   <form id="access-form" novalidate>
     <div class="field">
-      <label for="codename" class="field-label">Codename</label>
+      <label for="User Name" class="field-label">Codename</label>
       <input
         id="codename"
         class="field-input"
