--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -38,6 +38,9 @@
       </p>
 
       <div class="header-actions">
+        <button class="classification classification-action dir-toggle" type="button" data-dir-toggle aria-expanded="false">
+          DIR
+        </button>
         <a class="classification classification-action classification-action-search" href="/search/">
           SEARCH
         </a>
@@ -53,7 +56,7 @@
           type="button"
           data-archive-clearance
         >
-          CLEARANCE NONE
+          CL NONE
         </button>
       </div>
 
@@ -85,6 +88,7 @@
 <script src="/assets/js/auth-config.js"></script>
 <script src="/assets/js/auth.js"></script>
 <script src="/assets/js/theme.js"></script>
+<script src="/assets/js/nav.js"></script>
 <script src="/assets/js/redact.js"></script>
 <script src="/assets/js/gate.js"></script>
 
