--- a/src/assets/css/content.css
+++ b/src/assets/css/content.css
@@ -247,3 +247,12 @@
 .redact.is-cleared .redact-text {
     display: inline;
 }
+
+
+.smallprint {
+    margin-top: var(--space-2);
+    opacity: 0.85;
+    font-size: var(--fs-sm);
+    font-style: italic;
+    text-align: center;
+}
