background and header touch ups

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -61,7 +61,7 @@
       LOG IN
     </button>
     <button
-      class="classification classification-action classification-action-clearance"
+      class="classification classification-action-clearance"
       type="button"
       data-archive-clearance
     >
