--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -3,7 +3,7 @@
     --ink: #222222;
     --rule: #000;
     --header-border: #3d0000;
-    --header-text: #f4f4f2;
+    --header-text: #e9e9e6;
     --alert-red: #8f0001;
     --dark-red: #700000;
     --header-meta-grad-top: #650000;
@@ -67,7 +67,7 @@ body[data-theme="horus"] {
 body[data-theme="dark"] {
     --paper: #1a1a1a;
     --ink: #e9e9e6;
-    --header-text: #f4f4f2;
+    --header-text: #e9e9e6;
     --header-border: #3d0000;
     --rule: #636363;
     --alert-red: #8f0001;
