test a few more colors

--- a/src/assets/css/base.css
+++ b/src/assets/css/base.css
@@ -11,6 +11,7 @@
     --tag-gray: #636363;
     --grid-color: rgba(99, 99, 99, 0.04);
     --panel-fill: #ECECEA;
+    --panel-fill-dark: #262626;
     --alert-focus-bg: rgba(143, 0, 1, 0.06);
 
     --space-1: 0.5rem;
